--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <button class="box"></button>
             </div>
         </div>
-        <button class="reset">Reset Game</button>
+        <button id="reset-btn" class="reset">Reset Game</button>
     </main>
+    <script src="app.js"></script>
 </body>
 </html>
