--- a/Snake-Game JS/index.html
+++ b/Snake-Game JS/index.html
@@ -29,8 +29,11 @@
             </h3>
           </div>
         </div>
-        <div class="board"></div>
+        <div class="board">
+          <div class="block"></div>
+        </div>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
